# diffren

./: Cargo.toml  LICENSE  README.md
src/: cli.rs  config.rs  display.rs  edit.rs  entities.rs  filesystem.rs  interaction.rs  main.rs  ren.rs  validation.rs
