[package]
name = "diffren"
version = "0.2.0"
edition = "2021"
authors = ["Etn <etn406@gmail.com>"]
license = "MIT"
description = "A tool to rename files using a diff editor"
readme = "README.md"
homepage = "https://github.com/etn406/diffren"
repository = "https://github.com/etn406/diffren"
categories = ["command-line-utilities"]

[dependencies]
clap = { version = "3.2", features = ["derive"] }
colored = "2.0"
glob = "0.3"
tempfile = "3.3"
dialoguer = "0.10"
serde = { version = "1.0", features = ["derive"] }
preferences = { git = "https://github.com/etn406/preferences-rs", branch = "main", version = "2.1" }
